tests/ui/feature-gates/feature-gate-more-maybe-bounds.stderr
error[E0658]: `?Trait` is not permitted in supertraits
  --> $DIR/feature-gate-more-maybe-bounds.rs:5:15
   |
LL | trait Trait3: ?Trait1 {}
   |               ^^^^^^^
   |
   = note: traits are `?Trait1` by default
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `?Trait` is not permitted in trait object types
  --> $DIR/feature-gate-more-maybe-bounds.rs:10:28
   |
LL | fn foo(_: Box<dyn Trait1 + ?Trait2>) {}
   |                            ^^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> $DIR/feature-gate-more-maybe-bounds.rs:7:26
   |
LL | trait Trait4 where Self: ?Trait1 {}
   |                          ^^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0203]: type parameter has more than one relaxed default bound, only one is supported
  --> $DIR/feature-gate-more-maybe-bounds.rs:12:11
   |
LL | fn bar<T: ?Trait1 + ?Trait2>(_: T) {}
   |           ^^^^^^^   ^^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/feature-gate-more-maybe-bounds.rs:12:11
   |
LL | fn bar<T: ?Trait1 + ?Trait2>(_: T) {}
   |           ^^^^^^^

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/feature-gate-more-maybe-bounds.rs:12:21
   |
LL | fn bar<T: ?Trait1 + ?Trait2>(_: T) {}
   |                     ^^^^^^^

error[E0203]: type parameter has more than one relaxed default bound, only one is supported
  --> $DIR/feature-gate-more-maybe-bounds.rs:19:11
   |
LL | fn baz<T: ?Trait + ?Trait>(_ : T) {}
   |           ^^^^^^   ^^^^^^

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/feature-gate-more-maybe-bounds.rs:19:11
   |
LL | fn baz<T: ?Trait + ?Trait>(_ : T) {}
   |           ^^^^^^

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/feature-gate-more-maybe-bounds.rs:19:20
   |
LL | fn baz<T: ?Trait + ?Trait>(_ : T) {}
   |                    ^^^^^^

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0203, E0658.
For more information about an error, try `rustc --explain E0203`.
